--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">IMDb Movies</string>
+    <string name="home">Home</string>
+    <string name="saved">Saved</string>
 </resources>
