Added network bound resource with flow, UI, single movie page, other changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">IMDb Movies</string>
     <string name="home">Home</string>
     <string name="saved">Saved</string>
+    <string name="error_feed">Error while fetching movies</string>
 </resources>
