Added saved page, added save button in movie detail page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home">Home</string>
     <string name="saved">Saved</string>
     <string name="error_feed">Error while fetching movies</string>
+    <string name="error_saved_movies">Error while loading saved movies</string>
 </resources>
